--- a/app/assets/sass/partials/_landing.scss
+++ b/app/assets/sass/partials/_landing.scss
@@ -47,7 +47,7 @@
 	width: 100%;
 	padding-top: 120px;
 	position: relative;
-	z-index: -1001;
+	// z-index: -1001;
 }
 .trapezoid{
 	font-family:$sans;
